tests/ui/implementation/fail_random_trait.stderr
error[E0277]: the trait bound `dyn ChainExtensionDefinition: ExtensionDescription` is not satisfied
  --> tests/ui/implementation/fail_random_trait.rs:16:1
   |
16 | #[obce::implementation]
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `ExtensionDescription` is not implemented for `dyn ChainExtensionDefinition`
   |
   = note: this error originates in the attribute macro `obce::implementation` (in Nightly builds, run with -Z macro-backtrace for more info)
